fix : code.js 연결

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="./js/code.js"></script>
     <script src="./jsx/index.js"></script>
   </body>
 </html>
