--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,5 +9,10 @@
     <div id="root"></div>
     <script src="./js/code.js"></script>
     <script src="./jsx/index.js"></script>
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js"
+      integrity="sha384-70k0rrouSYPWJt7q9rSTKpiTfX6USlMYjZUtr1Du+9o4cGvhPAWxngdtVZDdErlh"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
