--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="http://localhost:8000/js/code.js"></script>
-    <script src="http://localhost:8000/jsx/index.js"></script>
+    <script src="http://13.209.87.137/js/code.js"></script>
+    <script src="http://13.209.87.137/jsx/index.js"></script>
     <script
       src="https://t1.kakaocdn.net/kakao_js_sdk/2.3.0/kakao.min.js"
       integrity="sha384-70k0rrouSYPWJt7q9rSTKpiTfX6USlMYjZUtr1Du+9o4cGvhPAWxngdtVZDdErlh"
